objects/ssot__GiftDesignation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AverageTransactionAmount__c</fullName>
        <label>Average Transaction Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CapitalPurpose__c</fullName>
        <label>Capital Purpose</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentOperationsPurpose__c</fullName>
        <label>Current Operations Purpose</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentYearTransactionCount__c</fullName>
        <label>Current Year Transaction Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentYearTrxnAmount__c</fullName>
        <label>Current Year Trxn Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FirstPaidTransactionDate__c</fullName>
        <label>First Paid Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__HighestTransactionAmount__c</fullName>
        <label>Highest Transaction Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Gift Designation Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <label>Is Active</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastPaidTransactionDate__c</fullName>
        <label>Last Paid Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastTwoYearTrxnAmount__c</fullName>
        <label>Last Two Year Trxn Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LastTwoYearTrxnCount__c</fullName>
        <label>Last Two Year Trxn Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LastYearTransactionCount__c</fullName>
        <label>Last Year Transaction Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LastYearTrxnAmount__c</fullName>
        <label>Last Year Trxn Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LowestTransactionAmount__c</fullName>
        <label>Lowest Transaction Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalTransactionAmount__c</fullName>
        <label>Total Transaction Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalTransactionCount__c</fullName>
        <label>Total Transaction Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>